2001-03-06  Adam Fedor  <fedor@gnu.org>

	* Source/libgnustep-base.def: Regenerate.

2001-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Changed ([+setUserLanguages:]) to use
	NSLanguages.
	* Documentation/gsdoc/NSUserDefaults.gsdoc: documented the
	([+setUserlanguages:]) method.

2001-03-04  Jonathan Gapen  <jagapen@home.com>

	* Documentation/gsdoc/NSCharacterSet.gsdoc: Documented some methods.
	* Headers/gnustep/unicode/caseconv.h: Updated case-mapping tables.
	* Source/NSBitmapCharSet.m: Added sanity check to initWithBitmap:
	* Source/Unicode.m: Changed uni_toupper() and uni_tolower() to use
	direct lookup in two-level tables, rather than a linear search.

2001-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Corrected 
	([-_bundleResourcePathsWithRootPath:subPath:]) to use
	([NSUserDefaults +userLanguages]) to get language array again.
	* Documentation/gsdoc/NSUserDefaults.gsdoc: Updated and added
	information about +userLanguages

2001-03-03  Adam Fedor  <fedor@gnu.org>

	* Source/NSInvocation.m: Add missing static inline to __get_arg
	(patch from David Relson <relson@osagesoftware.com>).

2001-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSerializer.m:
	* Source/NSURLHandle.m:
	* Source/NSUnarchiver.m:
	* Source/GSFormat.m:
	* Source/GSHTTPURLHandle.m:
	* Source/GSMime.m:
	* Source/GSString.m:
	* Source/NSDictionary.m:
	* Source/NSPortNameServer.m:
	Various minor changes to avoid compiler warnings.
	* Source/NSFileManager.m: ([-fileSystemRepresentationWithPath:])
	Use CYGWIN_HOME as suggested by Michael Scheibler
	* Source/NSUser.m: NSHomeDirectoryForUser() fix for home path
	on NT by Michael Scheibler.

2001-03-01  Jonathan Gapen  <jagapen@home.com>

	* NSCharacterSets/whitespaceCharSet.dat,
	NSCharacterSets/whitespaceAndNlCharSet.dat: Add tab character.

2001-03-01  Nicola Pero  <n.pero@mi.flashnet.it>

	* aclocal.m4 (AC_SYS_PROCFS): Reverted last change in code to detect